# opengl-voxels

./: CMakeLists.txt  VoxelOctree.h  VoxelStruct.h  VoxelsRound1.vcxproj  VoxelsRound1.vcxproj.filters  camera.h  main.cpp  marchingCubes.h  noise.h  shader.h  simpleShader.frag  simpleShader.vs  simplexnoise1234.cpp  voxels.h  voxels.vs
include/: Block.h  VoxelField.h  VoxelOctree.h  grassTex.h  mesh.h  my_texture.h  noise.h  simplexnoise1234.h
shaders/: grassShader.frag  grassShader.vs  voxels.frag
src/: main.cpp
